[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-toolguard"
version = "5.1.1"
description = "Cloudflare for AI Agents. 6-layer security interceptor and observability dashboard."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ToolGuard Contributors"}
]
keywords = [
    "ai", "agents", "tool-calling", "testing", "reliability",
    "llm", "langchain", "openai", "pydantic", "observability"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5,<3.0",
    "click>=8.0,<9.0",
    "rich>=13.0,<14.0",
    "pyyaml>=6.0,<7.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]
openai = ["openai>=1.0.0"]
dashboard = ["fastapi", "uvicorn", "sse-starlette"]
all = ["langchain-core>=0.1.0", "crewai>=0.1.0", "openai>=1.0.0", "fastapi", "uvicorn", "sse-starlette"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
toolguard = "toolguard.cli.main:cli"

[project.urls]
Homepage = "https://github.com/Harshit-J004/toolguard"
Documentation = "https://github.com/Harshit-J004/toolguard#readme"
Repository = "https://github.com/Harshit-J004/toolguard"
Issues = "https://github.com/Harshit-J004/toolguard/issues"

[tool.setuptools.packages.find]
include = ["toolguard*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
